Update game modes and word list